# FFmpegPlayer

app/: build.gradle
app/src/androidTest/java/com/zl/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  ZLFFmpeg.cpp  ZLFFmpeg.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/zl/ffmpegplayer/: MainActivity.java  ZLPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zl/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
